--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -8,7 +8,7 @@
    feel free to play around with these and see what other look you can come up with! :D
 */
 
-$accent: #97ABFF;
+$accent: #f433ca;
 $accentDark: #123597;
 $textColor: white;
 $background: #262632;
